# nuclear-F-actin-Napari

./: LICENSE  README.md  pyproject.toml  setup.cfg
nuclear_F_actin/: __init__.py  detect_inference.py  napari.yaml  weights.py
nuclear_F_actin/detTrainer/: celldata.yaml  detTrainer.py  detTrainer2.py  detTrainer4.py
nuclear_F_actin/detTrainer/ultralytics/nn/: tasks.py
nuclear_F_actin/detTrainer/ultralytics/nn/myModules/: CARAFE.py  HWD.py  block.py
nuclear_F_actin/detTrainer/ultralytics/nn/myModules/backbone/: SwinTransformer.py
nuclear_F_actin/segTrainer/: segTrainer.py
nuclear_F_actin/segTrainer/models/: Unets.py  bisenet.py  espnet.py  fcn.py  icnet.py  segbase.py
nuclear_F_actin/segTrainer/models/base_models/: mobilenetv2.py
nuclear_F_actin/segTrainer/tools/: Data_Loader.py
nuclear_f_actin/: detect_inference.py  napari.yaml  segment_inference.py  weights.py
nuclear_f_actin/detTrainer/: CHC-YOLO.yaml  celldata.yaml  detTrainer.py
nuclear_f_actin/detTrainer/ultralytics/: __init__.py
nuclear_f_actin/detTrainer/ultralytics/nn/modules/: head.py
nuclear_f_actin/detTrainer/ultralytics/nn/myModules/: Attention.py
nuclear_f_actin/detTrainer/ultralytics/nn/myModules/backbone/: convnextv2.py  shufflenetv2.py
nuclear_f_actin/detTrainer/ultralytics/utils/: loss.py  metrics.py
nuclear_f_actin/detTrainer/utils/: ops.py  tal.py
nuclear_f_actin/segTrainer/: segTrainer.py
nuclear_f_actin/segTrainer/models/: bisenet.py  deeplabv3.py  espnet.py  segbase.py
nuclear_f_actin/segTrainer/tools/: Metrics.py
