[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

requires-python = ">=3.9"

dependencies = [
    "Pillow",
    "onnxruntime",
    "numpy",
    "ultralytics",
    "qtpy",
    "pyqt5",
    "pyyaml",
    "platformdirs",
    "napari[all]",
    "ligth-the-torch",
    
]

